--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -57,7 +57,7 @@
                 <div class="form-group col-sm-8 mx-auto">
                 <label class="control-label col-sm-2 ms-1 mb-1" for="description">Description:</label>
                 <div class="col-sm-12">
-                    <textarea rows="3" placeholder="Enter description of listing" class="form-control" name="description" id="description_input" maxlength="200"></textarea>
+                    <textarea rows="3" placeholder="Enter description of listing" class="form-control textarea" name="description" id="description_input" maxlength="200"></textarea>
                 </div>
                 </div>
                 <div class="form-group mt-3 col-sm-8 mx-auto">
