--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="form-group mt-4">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <a class="btn red-btn col-sm-5" href="/register/index.html">Create Account</a>
+                        <button type="submit" class="btn red-btn col-sm-5">Create Account</button>
                     </div>
                 </div>
             </form>
