added pages folder to have a better system

--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -8,12 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <script type="module" src="../scripts/register/register.js" defer></script>
+        <script type="module" src="../../scripts/register/register.js" defer></script>
     </head>
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-sm border-bottom">
-                <a class="navbar-brand" href="../index.html">ElectroAuction</a>
+                <a class="navbar-brand" href="../../index.html">ElectroAuction</a>
                 <div class="w-100">
                     <form class="d-flex input-group w-50 search">
                         <input
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item px-2">
-                            <a class="nav-link login" href="../index.html">Login</a>
+                            <a class="nav-link login" href="../../index.html">Login</a>
                         </li>
                     </ul>
                 </div>
