--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="/register/index.html">Register</a>
+                            <a class="nav-link" href="pages/register/index.html">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="form-group mt-4">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <button type="submit" class="btn red-btn col-sm-5">Create Account</button>
+                        <a href="pages/register/index.html" class="btn red-btn col-sm-5">Create Account</a>
                     </div>
                 </div>
             </form>
