--- a/pages/create_listing/index.html
+++ b/pages/create_listing/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <!-- <script src="scripts/create_listing/create_listing.js" defer></script> -->
+        <!-- <script src="../scripts/create_listing/create_listing.js" defer></script> -->
     </head>
     <body>
         <div class="container">
