Added flex to listings and displaying credit amount

--- a/pages/listings_logged_in/index.html
+++ b/pages/listings_logged_in/index.html
@@ -6,7 +6,7 @@
         <title>Electro Auction | Create Listing</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="../../scripts/listings_logged_in/listings_logged_in.js" defer></script>
     </head>
@@ -60,7 +60,7 @@
 
         <h1 class="text-center mt-4">New Listings</h1>
 
-        <div id="listings_section">
+        <div id="listings_section" class="listings-section d-flex flex-wrap justify-content-center col-sm-12 mb-4">
                     
         </div> 
         
