--- a/pages/create_listing/index.html
+++ b/pages/create_listing/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <!-- <script src="../scripts/create_listing/create_listing.js" defer></script> -->
+        <script type="module" src="/scripts/create_listing/create_listing.js" defer></script>
     </head>
     <body>
         <div class="container">
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse col-sm-4" id="navbarNav">
                     <ul class="navbar-nav ms-auto text-center">
                         <li class="nav-item ps-2">
-                            <a class="nav-link credits">Credits:<br> <span>900</span></a>
+                            <a class="nav-link credits">Credits:<br> <span id="credit_amount"></span></a>
                         </li>
                         <li class="nav-item px-2 align-self-center">
                             <a class="nav-link profile" href="../profile/index.html">Profile</a>
@@ -46,7 +46,7 @@
             <h1 class="text-center mt-5">Create Listing</h1>
             <div class="container mt-4 row mx-auto col-10 col-md-8 col-lg-6">
             
-            <form class="form-horizontal" id="loginForm">
+            <form class="form-horizontal" id="postForm">
                 <div class="form-group col-sm-8 mx-auto">
                     <label class="control-label col-sm-2 ms-1 mb-1" for="title">Title:</label>
                     <div class="col-sm-12">
@@ -61,23 +61,27 @@
                 </div>
                 </div>
                 <div class="form-group mt-3 col-sm-8 mx-auto">
+                <label class="control-label col-sm-2 ms-1 mb-1 mx-auto" for="tags">Tags:</label>
+                <div class="col-sm-12">          
+                    <input type="text" class="form-control rounded-0 border" id="tags_input" placeholder="Enter multiple tags separated by commas" name="tags">
+                </div>
+                </div>
+                <div class="form-group mt-3 col-sm-8 mx-auto">
                 <label class="control-label col-sm-2 ms-1 mb-1 mx-auto" for="media">Media:</label>
                 <div class="col-sm-12">          
-                    <input type="media" class="form-control rounded-0 border" id="media" placeholder="Enter media URL" name="media"  pattern="^()()[a-zA-Z\d]{8,25}$" title="Password must contain at least 8 characters.">
-                    <p class="media-msg text-danger"></p>
+                    <input type="url" class="form-control rounded-0 border" id="media_input" placeholder="Enter multiple media URLs separated by commas" name="media">
                 </div>
-                <div class="error-message text-danger"></div>
                 </div>
                 <div class="form-group col-sm-8 mx-auto">
-                    <label class="control-label col-sm-4 ms-1 mb-1" for="deadline">Deadline Date:</label>
+                    <label class="control-label col-sm-4 ms-1 mb-1 mt-3" for="deadline">Deadline Date:</label>
                     <div class="col-sm-12">
-                        <input type="deadline" class="form-control rounded-0 border" id="deadline_input" placeholder="Enter deadline date" name="deadline" >
+                        <input type="datetime-local" id="deadline_input" name="endsAt">
                         <p class="deadline-msg text-danger"></p>
                     </div>
                     </div> 
                 <div class="form-group mt-5">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <a class="btn blue-btn col-sm-5" href="../index.html">Create Listing</a>
+                        <button type="submit" class="btn blue-btn col-sm-5">Create Listing</button>
                     </div>
                 </div>
             </form>
