Added function for fetching the created lsting
Not working yet

--- a/pages/create_listing/index.html
+++ b/pages/create_listing/index.html
@@ -81,7 +81,7 @@
                     </div> 
                 <div class="form-group mt-5">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <button type="submit" class="btn blue-btn col-sm-5">Create Listing</button>
+                        <button type="submit" id="createBtn" class="btn blue-btn col-sm-5">Create Listing</button>
                     </div>
                 </div>
             </form>
