--- a/pages/create_listing/listing_created/index.html
+++ b/pages/create_listing/listing_created/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <script type="module" src="/../../scripts/create_listing/listing_created.js" defer></script>
+        <script type="module" src="/scripts/create_listing/listing_created.js"></script>
     </head>
     <body>
         <div class="container">
