Added bid function

--- a/pages/register/index.html
+++ b/pages/register/index.html
@@ -40,7 +40,7 @@
             <h1 class="text-center mt-5">Register</h1>
             <div class="container mt-4 row mx-auto col-10 col-md-8 col-lg-6">
             
-            <form class="form-horizontal" id="loginForm">
+            <form class="form-horizontal" id="registerForm">
                 <div class="form-group col-sm-8 mx-auto">
                     <label class="control-label col-sm-2 ms-1 mb-1" for="name">Username:</label>
                     <div class="col-sm-12">
