--- a/pages/singleListing/index.html
+++ b/pages/singleListing/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="../../scripts/listings_logged_in/singleListing.js" defer></script>
+        <script type="module" src="../../scripts/listings_logged_in/bid.js" defer></script>
     </head>
     <body>
         <div class="container">
