--- a/pages/listings_logged_in/index.html
+++ b/pages/listings_logged_in/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-sm border-bottom">
-                <a class="navbar-brand col-sm-4" href="../index.html">ElectroAuction</a>
+                <a class="navbar-brand col-sm-4" href="">ElectroAuction</a>
                 <div class="w-100">
                     <form class="d-flex input-group w-100 search">
                         <input
@@ -53,7 +53,7 @@
               <a class="nav-link rounded-0 col-sm-4" aria-current="page" href="#">Newest</a>
             </li>
             <li class="nav-item  my-2">
-              <a class="nav-link rounded-0 col-sm-2" href="#">Popular</a>
+              <button class="nav-link rounded-0 col-sm-2" id="popular">Popular</button>
             </li>
             <a href="/pages/create_listing/index.html" class="btn blue-btn my-2">New listing <span class="glyphicon">&#x2b;</span></a>
         </ul>
