--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-sm border-bottom">
-                <a class="navbar-brand" href="../../index.html">ElectroAuction</a>
+                <a class="navbar-brand" href="../listings_logged_in/index.html">ElectroAuction</a>
                 <div class="w-100">
                     <form class="d-flex input-group w-50 search">
                         <input
