--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
-        <script src="scripts/login/login.js" defer></script>
+        <script type="module" src="scripts/login/login.js" defer></script>
     </head>
     <body>
         <div class="container">
