--- a/pages/singleListing/index.html
+++ b/pages/singleListing/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link profile" href="../profile/index.html">Profile</a>
                         </li>
                         <li class="nav-item pe-2 align-self-center">
-                            <a class="nav-link sign-out" href="../index.html">Sign Out</a>
+                            <a class="nav-link sign-out">Sign Out</a>
                         </li>
                     </ul>
                 </div> 
