minor bs adjustments for styles

--- a/pages/create_listing/index.html
+++ b/pages/create_listing/index.html
@@ -6,6 +6,7 @@
         <title>Electro Auction | Create Listing</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="/scripts/create_listing/create_listing.js" defer></script>
@@ -47,6 +48,10 @@
 
             <h1 class="text-center mt-5">Create Listing</h1>
             <div class="container mt-4 row mx-auto col-10 col-md-8 col-lg-6">
+                <ul class="nav nav-pills nav-fill col-sm-12">
+                    <a href="/pages/listings_logged_in/index.html" class="btn blue-btn my-2 ms-2 mt-4"><i class="fa">&#xf104;</i> Back to auctions</a>
+                </ul>
+
             <h4 class="successfull-msg text-success text-center"></h4>
             
             <form class="form-horizontal" id="postForm">
