--- a/pages/listings_logged_in/index.html
+++ b/pages/listings_logged_in/index.html
@@ -51,7 +51,7 @@
         <ul class="nav nav-pills nav-fill col-sm-12 border-bottom">
             <li class="col-sm-2"></li>
             <li class="nav-item active my-2">
-              <a class="nav-link rounded-0 col-sm-4" id="newest" aria-current="page" href="#">Newest</a>
+              <a class="nav-link rounded-0 col-sm-4" id="popular" aria-current="page" href="#">Popular</a>
             </li>
             <li class="nav-item  my-2">
               <button class="nav-link rounded-0 col-sm-2" id="active">Active Listings</button>
