--- a/pages/singleListing/index.html
+++ b/pages/singleListing/index.html
@@ -11,7 +11,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="../../scripts/listings_logged_in/singleListing.js" defer></script>
-        <script type="module" src="../../scripts/listings_logged_in/bid.js" defer></script>
+        <!-- <script type="module" src="../../scripts/listings_logged_in/bid.js" defer></script> -->
     </head>
     <body>
         <div class="container">
@@ -56,7 +56,7 @@
             </ul>
 
             <h1 class="text-center mt-4">Item</h1>
-
+            <h2 class="deleted-msg text-danger"></h2>
             
 
             <div class="item-div">
