--- a/index.html
+++ b/index.html
@@ -6,49 +6,46 @@
         <title>Electro Auction | Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="scripts/login/login.js" defer></script>
     </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-expand-sm border-bottom">
+            <nav class="navbar navbar-expand-md border-bottom">
                 <a class="navbar-brand" href="index.html">ElectroAuction</a>
-                <div class="w-100">
-                    <form class="d-flex input-group w-50 search">
-                        <input
-                        type="search"
-                        class="form-control rounded-0 border"
-                        placeholder="Search auctions"
-                        aria-label="Search"
-                        aria-describedby="search-addon"
-                        />
-                        <button class="input-group-text blue-btn rounded-0" id="search-addon">
-                        Search
-                        </button>
-                    </form>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item px-2">
-                            <a class="nav-link" href="pages/register/index.html">Register</a>
-                        </li>
-                    </ul>
-                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">  
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="pages/listings_logged_in/index.html">Listings</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="pages/register/index.html">Register</a>
+                            </li>
+                        </ul>
+                    </div>
+                  </div>
             </nav>
         </div>
             <h1 class="text-center mt-5">Login</h1>
-            <div class="container mt-4 row mx-auto col-10 col-md-8 col-lg-6">
+            <div class="container mt-4 row mx-auto col-sm-12 col-md-8 col-lg-6">
             
             <form class="form-horizontal" id="loginForm">
-                <div class="form-group col-sm-8 mx-auto">
+                <div class="form-group col-sm-10 col-md-8 mx-auto">
                 <label class="control-label col-sm-2 ms-1 mb-1" for="email">Email:</label>
                 <div class="col-sm-12">
                     <input type="email" class="form-control rounded-0 border" id="email_input" placeholder="Enter email (@noroff.no / @student.noroff.no)" name="email" >
                     <p class="email-msg text-danger"></p>
                 </div>
                 </div>
-                <div class="form-group mt-3 col-sm-8 mx-auto">
+                <div class="form-group mt-3 col-sm-10 col-md-8 mx-auto">
                 <label class="control-label col-sm-2 ms-1 mb-1 mx-auto" for="pwd">Password:</label>
                 <div class="col-sm-12">          
                     <input type="password" class="form-control rounded-0 border" id="pwd" placeholder="Enter password" name="pwd"  pattern="^()()[a-zA-Z\d]{8,25}$" title="Password must contain at least 8 characters.">
@@ -58,7 +55,7 @@
                 </div>
                 <div class="form-group mt-5">        
                 <div class="col-sm-offset-2 col-sm-12 justify-content-center text-center">
-                    <button type="submit" class="btn blue-btn login-btn col-sm-5">Login</button>
+                    <button type="submit" class="btn blue-btn login-btn col-8 col-sm-8 col-md-6">Login</button>
                 </div>
                 <div class="group mt-4">
                     <div class="item line"></div>
@@ -67,7 +64,7 @@
                 </div>
                 <div class="form-group mt-4">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <a href="pages/register/index.html" class="btn red-btn col-sm-5">Create Account</a>
+                        <a href="pages/register/index.html" class="btn red-btn col-8 col-sm-8 col-md-6">Create Account</a>
                     </div>
                 </div>
             </form>
