--- a/pages/create_listing/index.html
+++ b/pages/create_listing/index.html
@@ -7,30 +7,20 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/dist/css/styles.css">
         <script type="module" src="/scripts/create_listing/create_listing.js" defer></script>
     </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-expand-sm border-bottom">
+            <nav class="navbar navbar-expand-md border-bottom">
                 <a class="navbar-brand col-sm-4" href="../listings_logged_in/index.html">ElectroAuction</a>
-                <div class="w-100">
-                    <form class="d-flex input-group w-100 search">
-                        <input
-                        type="search"
-                        id="search-focus"
-                        class="form-control rounded-0 border"
-                        placeholder="Search auctions"
-                        aria-label="Search"
-                        aria-describedby="search-addon"
-                        />
-                        <button class="input-group-text blue-btn rounded-0" id="search-addon">
-                        Search
-                        </button>
-                    </form>
-                </div>
-                <div class="collapse navbar-collapse col-sm-4" id="navbarNav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
                     <ul class="navbar-nav ms-auto text-center">
                         <li class="nav-item ps-2">
                             <a class="nav-link credits">Credits:<br> <span id="credit_amount"></span></a>
@@ -47,51 +37,51 @@
         </div>
 
             <h1 class="text-center mt-5">Create Listing</h1>
-            <div class="container mt-4 row mx-auto col-10 col-md-8 col-lg-6">
+            <div class="container row mx-auto col-sm-12 col-md-8 col-lg-6">
                 <ul class="nav nav-pills nav-fill col-sm-12">
-                    <a href="/pages/listings_logged_in/index.html" class="btn blue-btn my-2 ms-2 mt-4"><i class="fa">&#xf104;</i> Back to auctions</a>
+                    <a href="/pages/listings_logged_in/index.html" class="btn back-btn my-2 ms-2 mt-4"><i class="fa">&#xf104;</i> Back to auctions</a>
                 </ul>
 
             <h4 class="successfull-msg text-success text-center"></h4>
             
             <form class="form-horizontal" id="postForm">
-                <h6 class="text-secondary text-center">(*) required fields</h6>
+                <h6 class="text-danger text-center">(*) required fields</h6>
                 <div class="form-group col-sm-8 mx-auto">
-                    <label class="control-label col-sm-2 ms-1 mb-1" for="title">* Title:</label>
+                    <label class="control-label col-sm-6 ms-1 mb-1" for="title">* Title:</label>
                     <div class="col-sm-12">
                         <input type="title" class="form-control rounded-0 border" id="title_input" placeholder="Enter title" name="title" >
                         <p class="title-msg text-danger"></p>
                     </div>
                     </div>
                 <div class="form-group col-sm-8 mx-auto">
-                <label class="control-label col-sm-2 ms-1 mb-1" for="description">Description:</label>
+                <label class="control-label col-sm-6 ms-1 mb-1" for="description">Description:</label>
                 <div class="col-sm-12">
                     <textarea rows="3" placeholder="Enter description of listing" class="form-control textarea" name="description" id="description_input" maxlength="200"></textarea>
                 </div>
                 </div>
                 <div class="form-group mt-3 col-sm-8 mx-auto">
-                <label class="control-label col-sm-2 ms-1 mb-1 mx-auto" for="tags">Tags:</label>
+                <label class="control-label col-sm-6 ms-1 mb-1 mx-auto" for="tags">Tags:</label>
                 <div class="col-sm-12">          
                     <input type="text" class="form-control rounded-0 border" id="tags_input" placeholder="Enter multiple tags separated by commas" name="tags">
                 </div>
                 </div>
                 <div class="form-group mt-3 col-sm-8 mx-auto">
-                <label class="control-label col-sm-2 ms-1 mb-1 mx-auto" for="media">* Media:</label>
+                <label class="control-label col-sm-6 ms-1 mb-1 mx-auto" for="media">* Media:</label>
                 <div class="col-sm-12">          
                     <input type="url" class="form-control rounded-0 border" id="media_input" placeholder="Enter multiple media URLs separated by commas" name="media">
                     <p class="image-msg text-danger"></p>
                 </div>
                 </div>
                 <div class="form-group col-sm-8 mx-auto">
-                    <label class="control-label col-sm-4 ms-1 mb-1 mt-3" for="deadline">* Deadline Date:</label>
+                    <label class="control-label col-sm-6 ms-1 mb-1 mt-3" for="deadline">* Deadline Date:</label>
                     <div class="col-sm-12">
-                        <input type="datetime-local" id="deadline_input" name="endsAt">
+                        <input type="datetime-local" id="deadline_input" name="endsAt" class="col-12 p-2">
                         <p class="deadline-msg text-danger"></p>
                     </div>
                     </div> 
                 <div class="form-group mt-5">        
                     <div class="col-sm-offset-2 col-sm-12 text-center">
-                        <button type="submit" id="createBtn" class="btn blue-btn col-sm-5">Create Listing</button>
+                        <button type="submit" id="createBtn" class="btn blue-btn col-sm-5 col-10">Create Listing</button>
                     </div>
                 </div>
             </form>
