--- a/pages/listings_logged_in/index.html
+++ b/pages/listings_logged_in/index.html
@@ -37,7 +37,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
-                    <div class="collapse navbar-collapse col-sm-6" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse col-sm-12" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto text-center">
                             <li class="nav-item ps-2">
                                 <a class="nav-link credits">Credits:<br> <span id="credit_amount"></span></a>
@@ -55,7 +55,7 @@
         </div>
 
         
-        <div class="container row mx-auto col-12 col-sm-10 col-md-8">
+        <div class="container row mx-auto col-12 col-sm-10 col-md-8 col-lg-6">
 
         <ul class="nav nav-pills nav-fill col-sm-12 border-bottom">
             <li class="col-sm-2"></li>
