Cleanup in code

--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -31,7 +31,7 @@
             </nav>
         </div>
 
-            <div class="profile-background col-12 col-sm-10 bg-light mx-auto">
+            <div class="profile-background col-12 col-sm-10 col-md-10 bg-light mx-auto">
                 <div class="profile-head-section col-12 mx-auto d-flex justify-content-between text-center pt-4 h-100">
                     <div class="col-3">
                         <img class="rounded-circle h-50 avatar" alt="avatar" src=""/>
